[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "radiotherapy-env"
version = "1.0.0"
description = "OpenEnv RL environment for cancer radiotherapy treatment planning"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Vaishnavi Agrawal", email = "vagrawal_be22@thapar.edu"},
]
keywords = ["reinforcement-learning", "gymnasium", "radiotherapy", "cancer", "openenv"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    "gymnasium>=0.29.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "Pillow>=9.0.0",
    "scikit-image>=0.20.0",
    "pyyaml>=6.0",
    "openenv-core>=0.2.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
training = ["stable-baselines3>=2.0.0", "torch>=2.0.0"]
inference = ["openai>=1.0.0"]
demo = ["gradio>=4.0.0"]
dev = ["pytest>=7.0.0", "pytest-cov>=4.0.0"]

[project.urls]
Homepage = "https://github.com/VaishnaviAgrawal03/radio_therapy_planning_for_tumor_treatment"
Repository = "https://github.com/VaishnaviAgrawal03/radio_therapy_planning_for_tumor_treatment"
"HuggingFace Space" = "https://huggingface.co/spaces/VaishnaviAgrawal/RadiotherapyPlanningEnv"

[project.scripts]
server = "server.app:main"
radiotherapy-train = "baseline.train_ppo:main"
radiotherapy-eval = "baseline.evaluate:main"

[tool.setuptools.packages.find]
include = ["radiotherapy_env*"]
